# xilinx_deploy

./: README.md
classification/: CMakeLists.txt  README.md  test_classification_accuracy.cpp  test_classification_fps.cpp
classification/classification/: classification_v1.cpp  classification_v1.hpp
classification/common/: common.cpp  common.hpp
facenet/: demo_facefeature.cpp  generate_facefeature.cpp
multil_models/: build.sh  test_multil_models_show.cpp  test_multil_models_time.cpp
reid/: cal_map_new.py  demo_show_new.cpp  generate_reidfeature.cpp  web_demo.cpp
segmentation/: build.sh  demo_segmentation.cpp
tools/: eval_coco.py  eval_recall.py  eval_seg.py  show_seg.py  txt2pkl.py
wafermap/: CMakeLists.txt  README.md  wafermap.cpp
wafermap/wafermap/: wafermap.cpp  wafermap.hpp
yolov5/: CMakeLists.txt  README.md  build.sh  test_demo.cpp  test_yolov5_accuracy.cpp  test_yolov5_fps.cpp
yolov5/yolov5/: yolov5.cpp  yolov5.hpp
yolox/: CMakeLists.txt  README.md  show_yolox.cpp  test_yolox_accuracy.cpp  test_yolox_fps.cpp
yolox/yolovx/: yolox_v1.cpp  yolox_v1.hpp
